# CyberFlash-Tool

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  MASTER_PLAN.md  NEXT_PHASES_PLAN.md  PHASE4_PLAN.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/agents/: build-deploy-engineer.md  code-quality-reviewer.md  core-systems-engineer.md  cyberflash-architect.md  debugger-diagnostics.md  device-profile-manager.md  flash-safety-validator.md  phase-planner.md  qt-pyside6-expert.md  rom-download-manager.md  test-engineer.md  ui-theme-designer.md
.github/: copilot-instructions.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  release.yml  tests.yml
docs/: changelog.html  features.html  index.html  roadmap.html  screenshots.html
packaging/: cyberflash.spec
resources/profiles/: schema.json
resources/profiles/google/: bluejay.json  husky.json  lynx.json  oriole.json  panther.json  shiba.json  tokay.json
resources/profiles/motorola/: berlin.json  rhodej.json
resources/profiles/nothing/: Spacewar.json
resources/profiles/oneplus/: aston.json  guacamole.json  instantnoodle.json  lahaina.json
resources/profiles/samsung/: a52q.json  a54x.json  beyond1.json  dm1q.json  o1q.json  r8q.json  star2qltechn.json
resources/profiles/xiaomi/: alioth.json  evergo.json  spes.json  sweet.json  venus.json
resources/rom_feeds/: feeds.json
resources/udev/: 51-cyberflash-edl.rules
scripts/: create_device_profile.py  fetch_tools.py  generate_qrc.py
src/cyberflash/: __init__.py  __main__.py  app.py  cli.py
src/cyberflash/core/: adb_manager.py  ai_engine.py  ai_error_analyzer.py  app_data_manager.py  benchmark_runner.py  boot_animation_manager.py  boot_inspector.py  clipboard_manager.py  command_executor.py  contacts_manager.py  device_analyzer.py  device_detector.py  domain_lists.py  edl_engine.py  edl_manager.py  fastboot_manager.py  feed_registry.py  (+31 more)
tests/: conftest.py
tests/unit/: test_ai_engine.py  test_ai_error_analyzer.py  test_app_data_manager.py  test_backup_worker.py  test_batch_worker.py  test_battery_monitor_worker.py  test_benchmark_runner.py  test_boot_animation_manager.py  test_boot_inspector.py  test_clean_slate.py  test_clipboard_manager.py  test_command_executor.py  test_config_service.py  test_contacts_manager.py  test_crash_service.py  test_device_model.py  test_device_models.py  test_diagnostics_worker.py  test_domain_lists.py  test_download_worker.py  test_edl_engine_dry_run.py  test_edl_manager.py  test_event_bus.py  test_file_utils.py  test_flash_engine_dry_run.py  test_flash_journal.py  test_flash_task.py  test_gsi_checker.py  test_hash_worker.py  test_health_scorer.py  test_heimdall_manager.py  test_integrity_worker.py  test_kernel_manager.py  test_link_checker.py  test_module_compat.py  test_motorola_manager.py  test_new_widgets.py  test_payload_dumper.py  test_payload_extraction.py  test_perf_worker.py  (+38 more)
(+116 files in other folders)
