[project]
name = "cyberflash"
version = "1.0.0"
description = "Professional cross-platform Android ROM flashing tool"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "CyberFlash Contributors" }]
keywords = ["android", "flash", "rom", "adb", "fastboot", "pyside6"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = [
    "PySide6>=6.7",
    "qt-material>=2.14",
    "adbutils>=2.12",
    "requests>=2.31.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-qt>=4.4",
]
ai = [
    "google-genai>=1.0",
]

[project.scripts]
cyberflash = "cyberflash.__main__:main"
cyberflash-cli = "cyberflash.cli:main"

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade — modernise syntax for 3.12+
    "B",   # flake8-bugbear — common bug patterns
    "SIM", # flake8-simplify — simplifiable constructs
    "RUF", # ruff-specific rules
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie — misc lint
    "T20", # flake8-print (flag print() left in code)
    "TCH", # flake8-type-checking — move imports to TYPE_CHECKING
    "PLC", # pylint convention
    "PLE", # pylint error
]
ignore = [
    "E501",   # line too long — handled by formatter
    "RUF012", # mutable class variable — false positives with Qt Signals
    "TCH",    # type-checking imports — too disruptive for Qt-heavy codebase
    "PLC0415", # import-outside-top-level — intentional lazy imports
]

[tool.ruff.lint.per-file-ignores]
# SVG string literals contain long lines that cannot be split
"src/cyberflash/ui/themes/icons.py" = ["E501"]
# Scripts may use print()
"scripts/*.py" = ["T20"]
# CLI must print to stdout
"src/cyberflash/cli.py" = ["T20"]
# Tests may use assert etc.
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["cyberflash"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_equality = true
show_error_codes = true
plugins = []

[[tool.mypy.overrides]]
module = [
    "adbutils.*",
    "qt_material.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyberflash"]
